[package]
name = "bitboard"
version = "0.1.2"
authors = ["Joe Fredette <jfredett@gmail.com>"]
description = "Reasonably quick, arbitrary-sized square bitboards"
repository = "https://github.com/jfredett/bitboard"
readme = "README.md"
keywords = ["bitboards", "chess", "go", "boardgame"]
categories = ["data-structures"]
license = "MIT"

[badges]
travis-ci = { repository = "jfredett/bitboard", branch = "master" }
coveralls = { repository = "jfredett/bitboard", branch = "master", service = "github" }

maintenance = { status = "deprecated" }
is-it-maintained-issue-resolution = { repository = "jfredett/bitboard" }
is-it-maintained-open-issues = { repository = "jfredett/bitboard" }

[dependencies]
typenum = "1.9.0"

[[bin]]
name="queens"
path="tests/nqueens.rs"
